--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,18 +7,21 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-  - name: Posts
-    url: '#posts'
-    weight: 20
   - name: Talks
     url: '#talks'
+    weight: 20
+  - name: Posts
+    url: '#posts'
     weight: 30
   - name: Publications
-    url: '#featured'
+    url: '#publications'
     weight: 40
+  - name: Teaching
+    url: '#teaching
+    weight: 50
   - name: Contact
     url: '#contact'
-    weight: 50
+    weight: 60
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
