--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,8 +10,8 @@ main:
   - name: Talks
     url: '#talks'
     weight: 20
-  - name: Research
-    url: '#research'
+  - name: Publications
+    url: '#publications'
     weight: 30
   - name: Teaching
     url: '#teaching'
