--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,15 +7,15 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-  - name: Talks
-    url: '#talks'
-    weight: 20
+  # - name: Talks
+  #   url: '#talks'
+  #   weight: 20
   - name: Publications
     url: '#publications'
     weight: 30
-  - name: Teaching
-    url: '#teaching'
-    weight: 40
+  # - name: Teaching
+  #   url: '#teaching'
+  #   weight: 40
   - name: Contact
     url: '#contact'
     weight: 50
